@@ -269,11 +269,38 @@ Cocard unterstützt derzeit nur das Terminal Orga6141 in der Firmware-Version 3.
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">SMC-B Auto-PIN-Mode</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>On Demand</code>, siehe Abbildung</p></td>
+<td class="tableblock halign-left valign-top" rowspan="2"><p class="tableblock">SMC-B Auto-PIN-Mode</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>On Demand</code> (siehe Abbildung) - die PIN-Verifizierung muss von Anwender in Cocard über den Reload-Button manuell ausgelöst werden</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>Auto</code> - Die PIN-Verifizierung übernimmt ein Hintergrundjob automatisch, sobald Cocard feststellt, dass eine PIN zu verifizieren ist.</p></td>
 </tr>
 </tbody>
 </table>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Für die vollautomatische PIN-Verifizierung darf eine SMC-B-Karte keinen Fehlversuch haben (Verbleibende Versuche: 3). Sobald eine PIN falsch eingegeben wurde und die Anzahl der verbleibenden Versuche kleiner als 3 ist verzichtet der Hintergrundjob auf eine PIN-Eingabe. Das soll verhindern, dass eine falsch konfigurierte <code>DEFAULT_SMC_PIN</code> alle Karten in kurzer Zeit sperrt.
+</td>
+</tr>
+</table>
+</div>
+<div class="admonitionblock caution">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-caution" title="Caution"></i>
+</td>
+<td class="content">
+Bei Nutzung des Auto-PIN-Features bitte immer erst mit einem Kartenterminal und einer Karte testen, um Fehlkonfigurationen frühzeitig zu erkennen. Im Worst-Case könnten alle SMC-B-Karten in kürzester Zeit gesperrt werden und die Eingabe einer PUK erfordern!
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <div class="title">SMC-B Auto-PIN-Mode Bearbeiten</div>
 <p><span class="image"><img src="../_images/ct/card-terminal-edit-auto-pin-mode.png" alt="card terminal edit auto pin mode"></span></p>
