@@ -208,6 +208,9 @@
 <li>
 <p>Workflow für die PIN-Verifizierung aller Karten eines Terminals verbessert.</p>
 </li>
+<li>
+<p>Neu: Hintergrundjob für die automatische PIN-Verifizierung (nur unterstützte Terminals). SMC-B Auto-PIN-Mode muss hierfür am Kartenterminal gleich <code>Automatisch</code> sein. <a href="admin/card-terminal-edit.html" class="xref page">Mehr zur automatischen PIN-Verifizierung</a></p>
+</li>
 </ul>
 </div>
 </div>
