@@ -273,7 +273,7 @@ bin/rails g migration AddInternalToCardTerminal \
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>enum pin_mode: { off: 0, on_demand: 1 }</pre>
+<pre>enum pin_mode: { off: 0, on_demand: 1, auto: 2 }</pre>
 </div>
 </div>
 <div class="listingblock">
